--- a/css/main.css
+++ b/css/main.css
@@ -124,7 +124,9 @@ span{
     color: white;
 }
 
-
+.referee{
+    height: 250px;
+}
 
 
 
@@ -173,3 +175,63 @@ list-style: none;
     border-radius: 20px;
     margin-top:2px;
 }
+
+
+.inputs, .input1{
+    float: left;
+    width: 45%;
+    margin-left: 5px;
+}
+
+.form{
+    margin-left: 5px;
+}
+
+ label{
+    display: block;
+    padding-bottom: 5px;
+}
+
+
+input[type=text], input[type=email]{
+    width: 90%;
+    padding: 5px 0px;
+    margin-bottom: 5px;
+    background: transparent;
+    color: white;
+    transition: border-bottom 0.5;
+}
+
+input:focus{
+    border: none;
+    border-bottom: 2px solid white;
+    outline: none;
+    color: white;
+}
+
+textarea{
+    width: 100%;
+    padding: 5px 0px;
+    margin-bottom: 5px;
+}
+
+input[type=submit]{
+    background: #f4f4f4;
+    border: none;
+    border-radius: 12px 0px 12px 0px;
+    margin-left: 15px;
+    width: 90%;
+    padding: 5px 0px;
+    margin-bottom: 5px;
+    transition: color .5s, background-color .5s;
+    
+}
+
+input[type=submit]:hover{
+    background:transparent;
+    border: 1px solid black;
+    border-radius: 12px 0px 12px 0px;
+    margin-left: 15px;
+    color: white;
+}
+
